# haskell-first-principles

Chapter10/: Database.hs  Exercises.hs  Folds.hs  Scans.hs
Chapter11/: BinTrees.hs  Cardinalities.hs  DaPhone.hs  DogTypes.hs  Exercises.hs  FunctionCardinality.hs  Garden.hs  HuttonRazor.hs  LogicGoats.hs  Nullary.hs  PityTheBool.hs  Programmers.hs  Quad.hs  Vehicles.hs
Chapter12/: BinTrees.hs  EitherLib.hs  Exercises.hs  MaybeLib.hs  Unfolds.hs
Chapter13/: Exercises.hs  Imports.hs
Chapter13/hangman/: hangman.cabal
Chapter13/hello/: hello.cabal
Chapter14/addition/: addition.cabal
Chapter14/exercises/: exercises.cabal
Chapter14/morse/: morse.cabal
Chapter14/morse/src/: Main.hs  Morse.hs
Chapter14/morse/tests/: arbitraries.hs  tests.hs
Chapter15/: Madness.hs  Optional.hs
Chapter15/anotherMonoid/: README.md  anotherMonoid.cabal
Chapter15/monoids/: monoids.cabal
Chapter15/semigroups/: semigroups.cabal
Chapter15/semigroups/src/: BoolConj.hs  BoolDisj.hs  Combine.hs  Comp.hs  Four.hs  Identity.hs  Main.hs  Or.hs  Three.hs  Trivial.hs  Two.hs  Validation.hs
Chapter16/: BeKind.hs  HeavyLifting.hs  Possibly.hs  ReplaceExperiment.hs  Sum.hs  Wrap.hs
Chapter16/exercises/: exercises.cabal
Chapter16/funcInstances/: README.md  funcInstances.cabal
Chapter17/: Constant.hs  Fixer.hs  Identity.hs  Lookups.hs
Chapter17/lists/: lists.cabal
Chapter18/: ApplicFailed.hs  Bind.hs  MonadExamples.hs  SumMonad.hs
Chapter2/: Exercises.hs  LetAndWhere.hs
Chapter20/: Exercises.hs  LibFunctions.hs  Optional.hs
Chapter22/: Applics.hs  Asks.hs  Bip.hs  Example.hs  Exercises.hs  Monads.hs  ReaderMonad.hs  WarmUp.hs
Chapter23/: Exercises.hs  FizzBuzz.hs  Moi.hs  RandomG.hs
Chapter25/: BiFunctor.hs  ComposeT.hs
Chapter26/: EitherTransformer.hs  Embeddeds.hs  Exercises.hs  FixCode.hs  IdentityApplicative.hs  MaybeTransformer.hs  MonadIO.hs  MonadTrans.hs  Morra.hs  NoCommute.hs  ReaderTransformer.hs  StateTransformer.hs
Chapter3/: Exercises.hs  Print1.hs  Print2.hs
Chapter4/: Datatypes.hs  Exercises.hs
Chapter5/: Arit.hs  Exercises.hs  FunctionTypeInference.hs  Parametricity.hs  Sing.hs  TakeKnowDo.hs  TypeInference.hs  TypeMatching.hs
Chapter6/: EqTypeClass.hs  Exercises.hs  FromRedditThread.hs  NeedsClarificationExercises.hs  Types.hs
Chapter7/: CaseExpressions.hs  Exercises.hs  GrabBag.hs  Guards.hs  HigherOrderFunctions.hs  PatternMatching.hs  RoundTrip.hs
Chapter8/: ApplyTimes.hs  Exercises.hs  Map.hs  Tests.hs  tests.cabal
Chapter9/: Cipher.hs  EnumFromTo.hs  Exercises.hs  Filtering.hs  ListComp.hs  ListFunctions.hs  Map.hs  NonStrictEval.hs  StringsComp.hs  Zip.hs
(+63 files in other folders)
