name:          tests
version:       0.1.0.0
license-file:  LICENSE
author:        Frederico Ramos
maintainer:    fredericoramos78@gmail.com
category:      Tests
build-type:    Simple
cabal-version: >=1.10

test-suite tests
  ghc-options:       -Wall -fno-warn-orphans
  type:              exitcode-stdio-1.0
  main-is:           Tests.hs
  hs-source-dirs:    .
  build-depends:      base
                    , containers
                    , QuickCheck
  default-language: Haskell2010
