name:                semigroups
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/semigroups#readme
license:             BSD3
license-file:        LICENSE
author:              Frederico Ramos
maintainer:          fredericoramos78@gmail.com
copyright:           2021 Frederico Ramos
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable semigroups
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       QuickCheck
